fixed large landscape image overflow on smaller screen widths

--- a/frontend/src/components/Game/Game.css
+++ b/frontend/src/components/Game/Game.css
@@ -31,6 +31,7 @@
 .magnifier-image {
   width: auto;
   max-height: 65vh;
+  max-width: 99vw;
   height: auto;
   /* padding: 1rem; */
 }
